--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2018"
 [dependencies]
 crossbeam-channel = "0.3"
 mysql = "*"
-rumqtt = "*"
+rumqtt = { git = "https://github.com/damody/rumqtt.git" }
 clap = "2"
 log = "*"
 env_logger = "*"
