--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2018"
 [dependencies]
 crossbeam-channel = "0.3"
 mysql = "*"
-rumqtt = { git = "https://github.com/damody/rumqtt.git" }
+rumqtt = "0.31"
 clap = "2"
 log = "*"
 env_logger = "*"
