Add Equip and Fix matching system

--- a/src/config.toml
+++ b/src/config.toml
@@ -2,6 +2,7 @@
 SCORE_INTERVAL = 100
 HONOR_THRESHOLD = 1000
 BLOCK_RECENT_PLAYER_OF_GAMES = 0
+HERO = ["freyja", "isuna", "aros", "martin"]
 
 [[game_mode]]
 MODE = "ng1p2t"
@@ -17,11 +18,11 @@ MATCH_SIZE = 2
 
 [[game_mode]]
 MODE = "ng5p2t"
-TEAM_SIZE = 4
+TEAM_SIZE = 2
 MATCH_SIZE = 2
 
 
 [[game_mode]]
 MODE = "rk5p2t"
-TEAM_SIZE = 4
+TEAM_SIZE = 5
 MATCH_SIZE = 2
