RoomEventData:ChooseNGHero chage sql to redis

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ crossbeam = "0.7"
 failure = "0.1"
 failure_derive = "0.1"
 fnv = "1"
-futures = "0.1.18"
+futures = "0.3.5"
 native-tls = { version = "0.2", optional = true }
 regex = "1"
 serde = "1"
@@ -40,3 +40,6 @@ tokio-sync = "0.1"
 twox-hash = "1"
 url = "1"
 rayon = "1.2.1"
+redis = "0.16.0"
+futures-macro = "0.3.5"
+futures-util = "0.3.5"
